[project]
name = "gold"
version = "0.1.0"
description = "Gold Valuation Framework for multi-factor price prediction and analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"joblib>=1.4.0",
	"numpy>=2.0.0",
	"pandas>=2.2.0",
	"python-dotenv>=1.0.1",
	"requests>=2.31.0",
	"scikit-learn>=1.5.0",
	"xgboost>=2.0.0",
]
